@@ -1,8 +1,11 @@
 package presentation.pages.configpage;
 
 
-import domain.common.IntegerIdGenerator;
+import domain.common.Vector;
+import domain.entrances.EntranceConfig;
 import domain.railwayhalls.RailwayHallConfig;
+import domain.ticketboxes.TicketBoxConfig;
+import domain.common.IntegerIdGenerator;
 import presentation.pages.configpage.ticketboxes.EntranceConfigPanel;
 import presentation.pages.configpage.ticketboxes.ReservedTicketBoxConfigPanel;
 import presentation.pages.configpage.ticketboxes.TicketBoxConfigPanel;
@@ -12,7 +15,6 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class ConfigPage extends JFrame {
@@ -106,15 +108,114 @@ public class ConfigPage extends JFrame {
 
     private void saveConfiguration() {
         try {
-            var ticketBoxConfigs = ticketBoxConfigPanels.stream().map(x -> x.getTicketBoxConfig()).collect(Collectors.toList());
-            var reservedTicketBoxConfig = reservedTicketBoxConfigPanel.getTicketBoxConfig();
-            var entranceConfigs = entranceConfigPanels.stream().map(x -> x.getEntranceConfig()).collect(Collectors.toList());
-            var clientCapacity = Integer.parseInt(clientCapacityField.getText());
-            var restartClientCapacity = Integer.parseInt(restartClientCapacityField.getText());
-            var railwayHallConfig = new RailwayHallConfig(ticketBoxConfigs, reservedTicketBoxConfig, entranceConfigs, clientCapacity, restartClientCapacity);
-            System.out.println("Configuration saved: " );
+            var resultTicketBoxConfigs = ticketBoxConfigPanels.stream().filter(TicketBoxConfigPanel::isEnabled)
+                    .map(TicketBoxConfigPanel::getTicketBoxConfig).toList();
+            var resultEntranceConfigs = entranceConfigPanels.stream().filter(EntranceConfigPanel::isEnabled)
+                    .map(EntranceConfigPanel::getEntranceConfig).toList();
+
+            var resultReservedTicketBoxConfig = reservedTicketBoxConfigPanel.getTicketBoxConfig();
+
+            var resultClientCapacity = Integer.parseInt(clientCapacityField.getText());
+            var resultrestartClientCapacity = Integer.parseInt(restartClientCapacityField.getText());
+
+            if(ValidateElementsDistance(resultTicketBoxConfigs, resultEntranceConfigs, resultReservedTicketBoxConfig))
+            {
+                var railwayHallConfig = new RailwayHallConfig(resultTicketBoxConfigs,
+                        resultReservedTicketBoxConfig, resultEntranceConfigs, resultClientCapacity,
+                        resultrestartClientCapacity);
+                // Route to UI Page
+                // You could add your logic here
+            }
+
         } catch (NumberFormatException ex) {
             JOptionPane.showMessageDialog(this, "Invalid number format. Please enter valid numbers.", "Error", JOptionPane.ERROR_MESSAGE);
         }
+    }
+
+    private boolean ValidateElementsDistance(List<TicketBoxConfig> ticketBoxConfigList,
+                                             List<EntranceConfig> entranceConfigList,
+                                             TicketBoxConfig reservedTicketBoxConfig) {
+
+        int minimalDistance = 20; // Could be changed for UI developers
+
+        // Compare ticket boxes coordinates
+        if(!hasMinimumGap(ticketBoxConfigList, entranceConfigList, reservedTicketBoxConfig, minimalDistance)) {
+            JOptionPane.showMessageDialog(this, "Invalid coordinates. It should be a " + minimalDistance + " between elements", "Error", JOptionPane.ERROR_MESSAGE);
+            return false;
+        }
+
+        // Additional validation could be added here (Ping Valera)
+
+        return true;
+    }
+
+    public static boolean hasMinimumGap(List<TicketBoxConfig> ticketBoxConfigList,
+                                        List<EntranceConfig> entranceConfigList,
+                                        TicketBoxConfig reservedTicketBoxConfig,
+                                        int minimalDistance) {
+        // Check for gaps between TicketBoxConfig elements
+        for (int i = 0; i < ticketBoxConfigList.size(); i++) {
+            for (int j = i + 1; j < ticketBoxConfigList.size(); j++) {
+                Vector position1 = ticketBoxConfigList.get(i).getPosition();
+                Vector position2 = ticketBoxConfigList.get(j).getPosition();
+
+                if (!hasMinimumGap(position1, position2, minimalDistance)) {
+                    return false;
+                }
+            }
+        }
+
+        // Check for gaps between EntranceConfig elements
+        for (int i = 0; i < entranceConfigList.size(); i++) {
+            for (int j = i + 1; j < entranceConfigList.size(); j++) {
+                Vector position1 = entranceConfigList.get(i).getPosition();
+                Vector position2 = entranceConfigList.get(j).getPosition();
+
+                if (!hasMinimumGap(position1, position2, minimalDistance)) {
+                    return false;
+                }
+            }
+        }
+
+        // Check for gaps between TicketBoxConfig and EntranceConfig elements
+        for (TicketBoxConfig ticketBox : ticketBoxConfigList) {
+            for (EntranceConfig entrance : entranceConfigList) {
+                Vector position1 = ticketBox.getPosition();
+                Vector position2 = entrance.getPosition();
+
+                if (!hasMinimumGap(position1, position2, minimalDistance)) {
+                    return false;
+                }
+            }
+        }
+
+        // Check for gaps between Reserved TicketBox and TicketBoxConfig
+        for (TicketBoxConfig ticketBox : ticketBoxConfigList) {
+                Vector position1 = ticketBox.getPosition();
+                Vector position2 = reservedTicketBoxConfig.getPosition();
+
+                if (!hasMinimumGap(position1, position2, minimalDistance)) {
+                    return false;
+                }
+        }
+
+        // Check for gaps between Reserved TicketBox and EntranceConfig
+        for (EntranceConfig entrance : entranceConfigList) {
+            Vector position1 = entrance.getPosition();
+            Vector position2 = reservedTicketBoxConfig.getPosition();
+
+            if (!hasMinimumGap(position1, position2, minimalDistance)) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    private static boolean hasMinimumGap(Vector position1, Vector position2, int minimalDistance) {
+        int deltaX = (int) Math.abs(position1.getX() - position2.getX());
+        int deltaY = (int) Math.abs(position1.getY() - position2.getY());
+
+        return deltaX >= minimalDistance && deltaY >= minimalDistance;
     }
 }
